# cmgd_nextflow_worker

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  activities.py  config.py  models.py  pyproject.toml  runner.py  sacct-out-example.json  starter.py  submit_alpine.sh  submit_test.sh  worker.py  workflow.py
cmgd_nextflow_worker/: activities.py  config.py  external_db.py  models.py  single_workflow.py  starter.py  worker.py  workflow.py
cmgd_nextflow_worker/coordinator/: test_workflow.py  workflow.py
tests/: test_run_cmd.py
