[project]
name = "cmgd_nextflow_worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "pydantic-core>=2.27.2",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "sqlalchemy[asyncio,asyncpg]>=2.0.39",
    "temporalio>=1.10.0",
]
package = { include = ["cmgd_nextflow_worker"] }
